# gpui-ce

./: Cargo.toml  README.md
crates/gpui/: Cargo.toml
crates/gpui/examples/: prelude.rs
crates/gpui/examples/bench/: data_table.rs  paths_bench.rs  pattern.rs  shadow.rs
crates/gpui/examples/learn/: animation.rs  async_tasks.rs  creating_components.rs  custom_drawing.rs  interactive_elements.rs  layout.rs  styling.rs  text.rs  transition.rs
crates/gpui/examples/legacy/: focus_visible.rs  gif_viewer.rs  gradient.rs  hello_world.rs  image_loading.rs  layer_shell.rs  opacity.rs  tree.rs  (+7 more)
crates/gpui/src/: app.rs  executor.rs  gpui.rs  http_client.rs  keymap.rs  lerp.rs  platform.rs  scene.rs  style.rs  styled.rs  transition.rs  window.rs
crates/gpui_elements/: Cargo.toml
crates/gpui_elements/src/: editable_text.rs  input.rs  lib.rs
crates/gpui_elements/src/editable_text/: actions.rs  caret.rs  element.rs  history.rs  input_element.rs  input_state.rs  layout.rs  shared_element.rs  shared_state.rs  state.rs  storage.rs  text_area_element.rs  text_area_state.rs
crates/gpui_elements/src/input/: actions.rs  colors.rs  cursor.rs  element.rs  history.rs  paint.rs  state.rs  state_input_handler.rs  storage.rs  unicode.rs
crates/gpui_linux/: Cargo.toml
crates/gpui_macos/src/: metal_renderer.rs
crates/gpui_platform/: Cargo.toml
crates/gpui_web/src/: http_client.rs
crates/gpui_wgpu/src/: wgpu_context.rs  wgpu_renderer.rs
crates/gpui_windows/: Cargo.toml
crates/gpui_windows/src/: directx_renderer.rs  events.rs  gpui_windows.rs  platform.rs  util.rs  window.rs
(+11 files in other folders)
