[package]
name = "gpui_elements"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["gpui"]

[dependencies]
gpui.workspace = true
async-io.workspace = true
unicode-segmentation.workspace = true
smallvec.workspace = true

[dev-dependencies]
gpui = { path = "../gpui", features = ["test-support"] }
